--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,11 @@
 {
   "manifest_version": 2,
-  "name": "Borderify",
+  "name": "Redact",
   "version": "1.0",
-
-  "description": "Adds a red border to all webpages matching mozilla.org.",
-
+  "description": "Redact personal identifiable information for screenshots",
   "icons": {
     "48": "icons/border-48.png"
   },
-
   "permissions": ["menus", "activeTab"],
-
   "background": { "scripts": ["background.js"] }
 }
